<resources>
    <string name="app_name">ForMoms_v2</string>
    <string name="nama_profile">Hai! Herlangga</string>
    <string name="tv_kabar">Apa kabarmu hari ini?</string>
    <string name="tv_recentMemories">Recent Memories</string>
    <string name="tv_care_tips">Care Tips</string>
    <string name="tv_lihat_detail">Lihat Detail</string>
    <string name="tv_memories">Memories</string>
    <string name="tv_my_favorite">My Favorite</string>
    <string name="tv_time">Dibuat 5 hari yang lalu</string>
    <string name="tv_time2">Dibuat 2 hari yang lalu</string>
    <string name="tvHoliday">Holiday</string>
    <string name="tvContent">Setelah masa pemberian ASI eksklusif bayi selama 6 bulan selesai, kini saatnya ia diberikan makanan pendamping ASI (MPASI). Alasannya karena di usia ini, pemberian ASI saja tidak cukup untuk memenuhi kebutuhan gizi hariannya.
Terlebih karena secara keseluruhan, kebutuhan gizi sang anak bertambah sehingga perlu makanan tambahan selain ASI. Khususnya beberapa zat gizi makro seperti protein dan lemak, dan zat gizi mikro seperti mineral.
Sementara ASI, hanya dapat memenuhi kebutuhan energi sekitar 65-80 persen. Kandungan zat gizi ASI juga terbilang sangat sedikit untuk memenuhi kebutuhan harian bayi, jika harus dikonsumsi sendiri tanpa tambahan dari makanan lain.
Namun jika memungkinkan, ASI sebaiknya masih diberikan selagi bayi diperkenalkan dengan makanan di 6 bulan pertamanya atau MPASI.</string>
    <string name="top_profile">Profile</string>
    <string name="tv_name_profile">Herlangga Sinaga</string>
    <string name="tv_tanggal_lahir">17 Desember 2002</string>
    <string name="tv_tempat_lahir">Bandung, Indonesia</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="tv_stat_bayi">Hidupkanlah hidup dengan kehidupan yang menghidupkan dalam hidup.</string>
    <string name="tv_hobby1">Pemainan</string>
    <string name="tv_hobby2">Musik</string>
    <string name="tv_hobby3">Game</string>
    <string name="title_splash">For Mom\'s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
