<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:id="@+id/drawer_layout">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_140sdp"
        android:background="#0ABDE3"
        android:elevation="@dimen/_10sdp">

        <ImageView
            android:id="@+id/ivMenuBars"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/fa_bars"
            android:paddingTop="@dimen/_6sdp"
            android:paddingLeft="@dimen/_6sdp"
            android:paddingRight="@dimen/_6sdp"
            android:paddingBottom="@dimen/_4sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_shape_menu"/>

        <ImageView
            android:id="@+id/ivSearch"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/fa_search"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_30sdp"/>


        <TextView
            android:id="@+id/tvNama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_profile"
            android:textColor="#FFFFFFFF"
            android:textSize="@dimen/_20ssp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_below="@id/ivMenuBars"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/nunito_extrabold"/>

        <TextView
            android:id="@+id/tvKabar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_kabar"
            android:textColor="@android:color/white"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_below="@id/tvNama"
            android:textSize="@dimen/_10ssp"
            android:fontFamily="@font/nunito"/>



    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative2"
        android:layout_below="@+id/relative1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvRecentView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_recentMemories"
            android:textSize="@dimen/_13ssp"
            android:layout_marginStart="@dimen/_16sdp"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/nunito_bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerRecentMemories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvRecentView"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relative3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative2">


        <TextView
            android:id="@+id/tvCareTips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:text="@string/tv_care_tips"
            android:layout_marginTop="@dimen/_16sdp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/nunito_bold"/>

        <TextView
            android:id="@+id/tvLihatDetailCare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_lihat_detail"
            android:textColor="#888888"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:fontFamily="@font/nunito_light"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCareTips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCareTips"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_16sdp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative3">

        <TextView
            android:id="@+id/tvMemories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_memories"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:textSize="@dimen/_13ssp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/nunito_bold"/>

        <TextView
            android:id="@+id/tvLihatDetailMemories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_lihat_detail"
            android:textColor="#888888"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:fontFamily="@font/nunito_light"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerMemories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMemories"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"/>

    </RelativeLayout>

    </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationBar"
        android:layout_width="wrap_content"
        android:layout_gravity="start"
        app:menu="@menu/list_sidebar"
        android:layout_height="match_parent"
        android:background="#0ABDE3"
        app:headerLayout="@layout/item_header"
        app:itemTextColor="@android:color/white" />

    </androidx.drawerlayout.widget.DrawerLayout>




